# light-chat

./: W_parameter.pth  env.yml  pyproject.toml
configs/: eval.yaml
configs/data/: datamodule.yaml
configs/model/: ngram_module.yaml  trigram_module.yaml
configs/paths/: default.yaml
light_chat/: eval.py
light_chat/data/: datamodule.py
light_chat/data/components/: dataset.py
light_chat/models/: ngram_module.py  trigram_module.py
light_chat/models/components/: mlp.py
light_chat/utils/: __init__.py  dataset.py  instantiators.py  logging_utils.py  rich_utils.py  utils.py
